--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,8 +4,6 @@ on:
   pull_request:
     paths:
       - 'src/**/*'
-    tags-ignore:
-      - v*
 
 concurrency:
   group: test-pr-${{ github.head_ref }}
@@ -35,6 +33,7 @@ jobs:
             - name: Get module *.csproj name
               id: csproj
               working-directory: ./src
+              shell: pwsh
               run: Write-Output "::set-output name=name::$((Get-ChildItem $dir -File '*.csproj').Basename)"
             
             # Used as prefix in module BHM naming scheme.
@@ -56,10 +55,12 @@ jobs:
             # 'msbuild restore' does not support NuGet package.config format
             - name: Restore NuGet packages
               working-directory: ./src
+              shell: pwsh
               run: nuget restore
             
             - name: Build Solution
               working-directory: ./src
+              shell: pwsh
               run: msbuild -p:Configuration=Debug -p:VERSIONED_BUILD=${{ steps.version.outputs.prop }}
                 
             - name: Upload BHM artifact
