--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -19,13 +19,11 @@ branches:
     is-mainline: false
   dev:
     regex: ^dev(elop)?(ment)?$
-    mode: ContinuousDeployment
-    tag: ''
     increment: Patch
-    prevent-increment-of-merged-branch-version: false
-    track-merge-target: true
+    prevent-increment-of-merged-branch-version: true
     source-branches: []
-    tracks-release-branches: true
+    track-merge-target: false
+    tracks-release-branches: false
     is-release-branch: false
     is-mainline: true
     pre-release-weight: 0
