--- a/src/Rotation Trainer Module.csproj
+++ b/src/Rotation Trainer Module.csproj
@@ -63,11 +63,15 @@
     <Compile Include="..\submodules\litedb\LiteDB\**\*.cs" Link="_Submodules\LiteDB\%(RecursiveDir)%(Filename)%(Extension)" />
     <Compile Include="Core\UI\Controls\AbilityHint.cs" />
     <Compile Include="Core\UI\Controls\DeleteButton.cs" />
-    <Compile Include="Core\UI\Controls\NumericInputPrompt.cs" />
+    <Compile Include="Core\UI\Controls\InputPrompt\BuildChatLinkInputPrompt.cs" />
+    <Compile Include="Core\UI\Controls\InputPrompt\InputPrompt[T,TSelf].cs" />
+    <Compile Include="Core\UI\Controls\InputPrompt\NumericInputPrompt.cs" />
+    <Compile Include="Core\UI\Controls\StoreButton.cs" />
     <Compile Include="Core\UI\Controls\UtilityRemapper.cs" />
     <Compile Include="Core\UI\Views\AbilityDetailsView\AbilityDetailsPresenter.cs" />
     <Compile Include="Core\UI\Views\AbilityDetailsView\AbilityDetailsView.cs" />
     <Compile Include="_Extensions\EnumExtensions.cs" />
+    <Compile Include="_Extensions\ObjectExtensions.cs" />
     <Compile Include="_Utils\TaskUtil.cs" />
   </ItemGroup>
   <ItemGroup>
