--- a/src/Rotation Trainer Module.csproj
+++ b/src/Rotation Trainer Module.csproj
@@ -62,14 +62,18 @@
   <ItemGroup>
     <Compile Include="..\submodules\litedb\LiteDB\**\*.cs" Link="_Submodules\LiteDB\%(RecursiveDir)%(Filename)%(Extension)" />
     <Compile Include="Core\UI\Controls\AbilityHint.cs" />
+    <Compile Include="Core\UI\Controls\RemoveButton.cs" />
     <Compile Include="Core\UI\Controls\DeleteButton.cs" />
     <Compile Include="Core\UI\Controls\InputPrompt\BuildChatLinkInputPrompt.cs" />
     <Compile Include="Core\UI\Controls\InputPrompt\InputPrompt[T,TSelf].cs" />
     <Compile Include="Core\UI\Controls\InputPrompt\NumericInputPrompt.cs" />
     <Compile Include="Core\UI\Controls\StoreButton.cs" />
     <Compile Include="Core\UI\Controls\UtilityRemapper.cs" />
-    <Compile Include="Core\UI\Views\AbilityDetailsView\AbilityDetailsPresenter.cs" />
-    <Compile Include="Core\UI\Views\AbilityDetailsView\AbilityDetailsView.cs" />
+    <Compile Include="Core\UI\Views\EditView\ConfigView\ConfigPresenter.cs" />
+    <Compile Include="Core\UI\Views\EditView\ConfigView\ConfigView.cs" />
+    <Compile Include="Core\UI\Views\EditView\ConfigView\WeaponSetView\WeaponSetView.cs" />
+    <Compile Include="Core\UI\Views\EditView\RotationView\AbilityDetailsView\AbilityDetailsView.cs" />
+    <Compile Include="Core\UI\Views\EditView\RotationView\RotationView.cs" />
     <Compile Include="_Extensions\EnumExtensions.cs" />
     <Compile Include="_Extensions\ObjectExtensions.cs" />
     <Compile Include="_Utils\TaskUtil.cs" />
